# rwkv-benchmark

./: README.md  STRUCTURE.md  download_weights.py  pyproject.toml
api_benchmark/: api.sh  api_batch_engine.py  api_server.py  batch_api_server.py  batch_engine.py  install_to_nemo_skills.sh  nemo_skills_example.sh  nemo_skills_rwkv_model.py  run_eval.sh  test_batch_api.py  test_lambada_api.py  test_nemo_integration.py
benchmarking/: README.md  api.sh  api_server.py  batch_engine.py  downloa.sh  run_eval.sh  test.py  test_lambada_api.py
docs/: HOW_TO_ADD_NEW_DATASET.md  QUICK_START.md  USAGE.md
eval/: GSM8K_100sample.jsonl  MATH500_100sample.jsonl  lambada_test.jsonl
eval_results/: lambada_perplexity_20251023_150305.json  lambada_perplexity_20251023_150436.json  lambada_perplexity_20251023_150536.json  lambada_perplexity_20251023_151121.json
local_batch_benchmark/: README.md  batch_engine.py  example_usage.py  pipeline.py  run.sh  run_mmlu_pro.py  run_pipeline.py
local_batch_benchmark/eval_results/: lambada_perplexity_20251023_165645.json  lambada_perplexity_20251023_170017.json  lambada_perplexity_20251023_170646.json  mmlu_pro_mmlu_pro_20251016_162409.json  mmlu_pro_mmlu_pro_20251016_163513.json  mmlu_pro_mmlu_pro_20251016_164044.json  mmlu_pro_mmlu_pro_20251023_155838.json
local_batch_benchmark/evaluators/: __init__.py  evaluator_registry.py  register_mmlu_pro.py
local_batch_benchmark/tasks/: __init__.py  dataset_registry.py  register_aime24.py  register_asdiv.py  (+12 more)
nemo-skills/: run.sh
reference/: rwkv7.py  utils.py
tools/: download.sh  hf_download.py
(+10 files in other folders)
