[project]
name = "rwkv-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "deepspeed>=0.17.1",
    "einops>=0.8.1",
    "gputils>=1.0.6",
    "lightning>=2.5.1.post0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "ninja>=1.11.1.4",
    "plotly>=6.1.2",
    "rwkv>=0.8.29",
    "rwkv-fla>=0.7.202506181413",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "triton>=3.3.1",
    "wandb>=0.20.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "platform_system != 'Darwin'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "platform_system != 'Darwin'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
